--- a/product-inventory-backend/package.json
+++ b/product-inventory-backend/package.json
@@ -11,8 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
-    "nodemon": "^3.1.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^5.12.2",
+    "nodemon": "^3.1.0",
+    "validator": "^13.11.0"
   }
 }
