--- a/product-inventory-backend/package.json
+++ b/product-inventory-backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongoose": "^5.12.2",
     "nodemon": "^3.1.0",
     "validator": "^13.11.0"
